# catflow-ingest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
catflow_ingest/: __init__.py  main.py  producer.py
tests/: test_ingest.py
